# OpenCMISS-Setup

./: .gitignore  CMakeLists.txt  OCCMakeBuild.cmake  OCCMakeCheck.cmake  OCFunctions.cmake  Options.cmake  README.rst
docs/: index.rst  support.rst
docs/cli/: gnulinux.rst  index.rst  osx.rst  windows.rst
docs/config/: config.rst  index.rst
docs/gui/: index.rst
